--- a/vector-app/build.gradle
+++ b/vector-app/build.gradle
@@ -247,7 +247,7 @@ android {
         debug {
             applicationIdSuffix ".debug"
             signingConfig signingConfigs.debug
-            resValue "string", "app_name", "Element - dbg"
+            resValue "string", "app_name", "Superhero - dbg"
 
             if (project.hasProperty("coverage")) {
                 testCoverageEnabled = coverage == "true"
@@ -255,7 +255,7 @@ android {
         }
 
         release {
-            resValue "string", "app_name", "Element"
+            resValue "string", "app_name", "Superhero"
             postprocessing {
                 // FIXME Set to true.
                 removeUnusedCode false
